2006-10-13  Joe Shaw  <joeshaw@novell.com>

	* worker/bloggers.xml: Added myself.
	* www/images/heads/joe.png: Added head

2006-10-04	Boris Kirzner	<borisk@mainsoft.com>

	* worker/bloggers.xml, www/images/heads/borisk.png: added head.

2006-09-20 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* worker/monologue-worker.cs: set the error status when we have a
	cached feed that failed.

2006-09-20 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* www/images/error.png:
	* worker/monologue-worker.cs:
	* worker/default.tpl: display an error icon and message for feeds that
	fail to be downloaded/parsed.

2006-09-16	Christian Hergert	<christian.hergert@gmail.com>

	* www/images/heads/vwdude.png: moved from chrish01.png
	* www/images/heads/chrish01.png: moved
	* worker/bloggers.xml: use new irc handle

2006-09-13  C.J. Adams-Collier  <cjcollier@colliertech.org>

	* worker/bloggers.xml: Changed to my new name

2006-09-06  Aaron Bockover  <abockover@novell.com>

	* worker/bloggers.xml: Added Gabriel Burt's feed

2006-08-21	Boris Kirzner	<borisk@mainsoft.com>

	* worker/bloggers.xml: Blog moved.
	
2006-08-13	Christian Hergert	<christian.hergert@gmail.com>

	* www/images/heads/chrish01.png: New hackergotchi
	* worker/bloggers.xml: New rss url for blog

2006-08-08 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* worker/monologue-worker.cs: speed this up by making up to 5
	simultaneous requests.

2006-08-08 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* worker/RSS.NET.dll: updated.

2006-08-02  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* worker/bloggers.xml: Got a new blog.

2006-07-19  Aaron Bockover  <abock@gnome.org>

	* worker/bloggers.xml:
	* www/images/heads/jtickle.png: Added jtickle's hackergotchi

2006-07-13  Aaron Bockover  <abock@gnome.org>

	* www/images/heads/abock.png: Updated to my new hackergotchi

2006-06-06  Mark Crichton <crichton@gimp.org>

	* worker/bloggers.xml: Fixed my blog entries
	* www/images/heads/crichtma.png: And a headshot... that isn't fake!
