@@ -1,3 +1,11 @@
+2006-10-14  C.J. Adams-Collier <cjcollier@colliertech.org>
+
+	* worker/bloggers.xml
+	- Added monocast
+	- long lines ( > 80 chars ) suck.
+	* www/images/heads/monocast.png
+	- Added monocast icon
+
 2006-10-13  Joe Shaw  <joeshaw@novell.com>
 
 	* worker/bloggers.xml: Added myself.
